修正PostgreSQL连接字符串端口为5432
将 appsettings.json 中的 PostgreSQL 连接字符串端口从 your_port 更新为标准端口号 5432，确保数据库连接配置正确。

--- a/src/CleanApp/appsettings.json
+++ b/src/CleanApp/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Data Source=codexapi.db"
-    "DefaultConnection": "Server=your_server;Port=your_port;User Id=postgres;Password=your_postgress_password;Database=CleanAppData"
+    "DefaultConnection": "Server=your_server;Port=5432;User Id=postgres;Password=your_postgress_password;Database=CleanAppData"
   },
   "Token": {
     "SecretKey": "www.precisio.app_ajdfjsaldfflasdfiu234234isHJFJI72135Hgaskdjhdugasd",
